--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=TekMol">TekMol</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528278314"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    368 points
+                                    369 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528460406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528461005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
