--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17235171">
                                         
-                                            132 comments
+                                            133 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bellinom">bellinom</a></strong> &nbsp;•&nbsp;
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528398163"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    235 points
+                                    236 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528460406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528461005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
