--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17254212" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
+                                    <a href="https://github.com/kragniz/tor-controller">Kubernetes operator to automatically deploy and run Tor hidden services</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242136" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.feram.io/blog/2018-06-05_transity_the_future_of_plain_text_accounting/">Transity – Plain Text Accounting</a>
+                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
                                 </span>
                             </td>
                         </tr>
@@ -317,7 +317,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17261869">
                                         
-                                            155 comments
+                                            157 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=MBCook">MBCook</a></strong> &nbsp;•&nbsp;
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=buserror">buserror</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528447440"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    312 points
+                                    313 points
                                 </span>
                             </td>
                         </tr>
@@ -557,7 +557,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17263589">
                                         
-                                            73 comments
+                                            74 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528492204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528492804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
