--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17254212" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
+                                    <a href="https://github.com/kragniz/tor-controller">Kubernetes operator to automatically deploy and run Tor hidden services</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242136" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.feram.io/blog/2018-06-05_transity_the_future_of_plain_text_accounting/">Transity – Plain Text Accounting</a>
+                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17247135">
                                         
-                                            477 comments
+                                            478 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dazhbog">dazhbog</a></strong> &nbsp;•&nbsp;
@@ -365,13 +365,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17251471">
                                         
-                                            354 comments
+                                            355 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=omot">omot</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528322584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    890 points
+                                    891 points
                                 </span>
                             </td>
                         </tr>
@@ -515,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=ozanonay">ozanonay</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528303175"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    588 points
+                                    590 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528458216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    524 points
+                                    525 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528492204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528492804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
