--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17246136" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
+                                    <a href="https://circuitverse.org/">CircuitVerse – Online Digital Circuit Simulator</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17246136" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://circuitverse.org/">CircuitVerse – Online Digital Circuit Simulator</a>
+                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
                                 </span>
                             </td>
                         </tr>
@@ -485,7 +485,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17259082">
                                         
-                                            393 comments
+                                            394 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
@@ -557,13 +557,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17260500">
                                         
-                                            268 comments
+                                            269 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528407338"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    510 points
+                                    511 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528495805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528496404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
