--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17246136" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
+                                    <a href="https://circuitverse.org/">CircuitVerse – Online Digital Circuit Simulator</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17246136" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://circuitverse.org/">CircuitVerse – Online Digital Circuit Simulator</a>
+                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.media.uzh.ch/en/Press-Releases/2018/CMS-Experiment.html">Direct Coupling of the Higgs Boson to the Top Quark Observed</a>
+                                    <a href="https://www.cntraveler.com/story/nearly-80-percent-of-japans-airbnbs-were-just-removed">Nearly 80% of Japan’s Airbnbs removed in response to new home-share law</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17235171">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17263565">
                                         
-                                            138 comments
+                                            258 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bellinom">bellinom</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528175974"
+                                            href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528446147"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     252 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528495805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528496404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
