--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/higgsfield/RL-Adventure-2">Reinforcement Learning: From Zero to State of the Art with Pytorch 4</a>
+                                    <a href="https://www.destroyallsoftware.com/blog/2017/the-biggest-and-weirdest-commits-in-linux-kernel-git-history">The Biggest and Weirdest Commits in Linux Kernel Git History (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17261063">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265151">
                                         
-                                            14 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528411873"
+                                            href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     218 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528497603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528498205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
