--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
+                                    <a href="https://blog.growthbot.org/chatbots-were-the-next-big-thing-what-happened">Chatbots were the next big thing: what happened?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17264718">
                                         
-                                            271 comments
+                                            436 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528407338"
+                                            href="https://news.ycombinator.com/user?id=cjauvin">cjauvin</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528461804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    520 points
+                                    521 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528509004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528509605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
