--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://monzo.com/features/ifttt/">Monzo now supports IFTTT</a>
+                                    <a href="http://www.chicagotribune.com/news/nationworld/politics/ct-ex-senate-staffer-charged-leak-investigation-20180607-story.html#nt=oft02a-1li3">FBI used Signal app messages in leak investigation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17264639">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265486">
                                         
-                                            1 comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=simonvc">simonvc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528461003"
+                                            href="https://news.ycombinator.com/user?id=yborg">yborg</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528466804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -420,7 +420,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528513204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528513805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
